feat(bukkit): improve NPC API and modifiers